--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -9,6 +9,10 @@
   <strong>Password:</strong>
   <%= @user.password %>
 </p>
+<p>
+  <strong>Login:</strong>
+  <%= @user.login %>
+</p>
 
 <%= link_to 'Edit', edit_user_path(@user) %> |
 <%= link_to 'Back', users_path %>
